examples/test/testpolicy3776.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3776
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key5: value25
      key47: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value3
      podSelector:
        matchLabels:
          key18: value22
          key26: value46
